# ESPWatchS3

./: .gitignore  .gitmodules  ESPWatchS3.kicad_pcb  ESPWatchS3.kicad_pro  ESPWatchS3.kicad_sch  README.md  fp-lib-table  sym-lib-table
ESPWatchOS/: CMakeLists.txt
ESPWatchOS/components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESPWatchOS/components/ui/images/: ui_img_dial_face_png.c  ui_img_hour_hand_png.c  ui_img_minute_hand_png.c  ui_img_second_hand_png.c
ESPWatchOS/components/ui/screens/: ui_WatchScreen.c
ESPWatchOS/main/: CMakeLists.txt  ESPWatchOS.cpp
Libraries/: WatchParts.kicad_sym
Libraries/3D/: 1575AT43A0040E.stp  BME280--3DModel-STEP-56544.STEP  BQ27441DRZR-G1A.step  CS050Z24G-A0.stp  EVQ-P4HB3B.step  PTS815_SJM_250_SMTR_LFS.stp  QFN50P150X150X40-8N.step  keystone-PN3046.STEP
Libraries/WatchParts.pretty/: 1575AT43A0040E.kicad_mod  AMP_NJG1143UA2-TE1.kicad_mod  ANTENNA_W3008.kicad_mod  ANTENNA_W3008C.kicad_mod  ANTENNA_W3011A.kicad_mod  BAT_3046.kicad_mod  BGA_746YAHR_TEX.kicad_mod  CS050Z18GA0.kicad_mod  CS050Z24GA0.kicad_mod  FIL_B39162B4327P810.kicad_mod  IND_VLS201612CX-220M-1.kicad_mod  LGA43R65P9X9_700X700X116.kicad_mod  MIAM10Q00B.kicad_mod  MOSFET_DMP2160UFDB-7.kicad_mod  OSC_XRCGB40M000F1S1DR0.kicad_mod  PQFN50P300X250X97-14N.kicad_mod  PTS815SJM250SMTRLFS.kicad_mod  QFN50P150X150X40-8N.kicad_mod  SOTFL50P160X60-8N.kicad_mod  SRP2512TMA1R0M.kicad_mod  SW_EVQ-P4HB3B.kicad_mod  TestPoint_Pad_D0.5mm.kicad_mod  Texas_S-PDSO-N12.kicad_mod  XDCR_BMP390.kicad_mod  XTAL_G83270022.kicad_mod
(+17 files in other folders)
